objects/Billing_Arrangement_Local__c.object
<CustomObject>
    <description>Create a new object named &quot;Billing Arrangement (Local)&quot; as a part of US# PRDCRM-43936.</description>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>HYPERLINK(Invoice_Record_ID__r.Account_Legal_Name__r.Id, Invoice_Record_ID__r.Account_Legal_Name__r.Name)</formula>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Arrangement_Cancel_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Arrangement Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Arrangement_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Arrangement Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Arrangement_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Arrangement Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Code_for_BA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Most Common Value Is &apos;All&apos;. If Billing Arrangements Need To Be Split By Contract Code (e.g. HMO vs. PPO) Then Enter The 4-Character Contract Code In This Field.</inlineHelpText>
        <label>Contract Code for BA</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Category__c</fullName>
        <label>Employee Category for BA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Employee_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Class_Name_for_BA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Class Name for BA</label>
        <referenceTo>Employee_Class__c</referenceTo>
        <relationshipLabel>Billing Arrangement (Local)s</relationshipLabel>
        <relationshipName>Billing_Arrangement_Local_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Record_ID__c</fullName>
        <description>Every Billing Arrangement Record must have an Invoice (no orphan records)</description>
        <label>Invoice Record ID</label>
        <referenceTo>Invoices_Local__c</referenceTo>
        <relationshipLabel>Billing Arrangement (Local)</relationshipLabel>
        <relationshipName>Billing_Arrangement_Local</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_LOB_for_BA__c</fullName>
        <label>Product LOB for BA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>LTD</fullName>
                </value>
                <value>
                    <fullName>STD</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Billing Arrangement (Local)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BARR-{000000}</displayFormat>
        <label>Billing Arrangement Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Arrangement (Local)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>